--- a/Messanger/Views/Windows/LoginWindow.xaml
+++ b/Messanger/Views/Windows/LoginWindow.xaml
@@ -12,7 +12,6 @@
         Width="500"
         ResizeMode="NoResize">
     <Window.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <Style x:Key="TB_UN"
                TargetType="TextBox">
             <Setter Property="Background"
@@ -57,11 +56,50 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="btn_LoginSugnup"
+               TargetType="Button">
+            <Setter Property="Background"
+                    Value="LightCyan" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                                BorderThickness="3"                                
+                                CornerRadius="14">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver"
+                         Value="True">
+                    <Setter Property="Background"
+                            Value="#FFC0EFFF" />
+                </Trigger>
+                <Trigger Property="IsEnabled"
+                         Value="False">
+                    <Setter Property="Opacity"
+                            Value="0.5" />
+                    <Setter Property="Foreground"
+                            Value="Silver" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <Window.DataContext>
         <vm:LoginWindowViewModel />
     </Window.DataContext>
-    <Grid Background="#FF3478AB">
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1"
+                                 StartPoint="0.5,0">
+                <GradientStop Color="#FF73B3BB" />
+                <GradientStop Color="#FF05B5FF"
+                              Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="100" />
@@ -123,17 +161,32 @@
                                         Height="40"
                                         Password="{Binding UserPassword}" />
             </Grid>
-            <Border Background="#FF2B7A8E"
-                    Padding="4"
-                    Margin="140, 40"
-                    CornerRadius="25">
-                <Button Content="Подключиться"
-                        Background="{x:Null}"
-                        Foreground="Azure"
-                        FontSize="28"
-                        BorderBrush="{x:Null}"
-                        Command="{Binding LoginUserCommand}"/>
-            </Border>
+            <Button Style="{StaticResource btn_LoginSugnup}"
+                    Command="{Binding LoginUserCommand}"
+                    Content="Войти"
+                    Width="180"
+                    Height="50"
+                    Margin="20"
+                    FontSize="32"
+                    BorderBrush="LightCyan"
+                    BorderThickness="3"
+                    
+                    Foreground="#FF2E65BF" />
+            <Button Style="{StaticResource btn_LoginSugnup}"
+                    Content="Зарегистироваться"
+                    Width="200"
+                    Height="40"
+                    Margin="20"
+                    FontSize="22"
+                    BorderBrush="LightCyan"
+                    BorderThickness="3"
+                    Background="#FFC8FFFF"
+                    Foreground="#FF2E65BF"
+                    Opacity="0.8" />
         </StackPanel>
+        <TextBlock Grid.Row="3"
+                   Text="{Binding ServerResponse}"
+                   Foreground="{Binding ColorServerResponse}"
+                   FontSize="18" />
     </Grid>
 </Window>
