--- a/Messanger/App.xaml
+++ b/Messanger/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Messanger.App"
+﻿<Application x:Class="Messenger.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Messanger"
+             xmlns:local="clr-namespace:Messenger"
              Startup="ApplicationStart">
     <!--StartupUri="Views\Windows\MainWindow.xaml"> -->
     <Application.Resources>
