--- a/Messanger/Views/Windows/LoginWindow.xaml
+++ b/Messanger/Views/Windows/LoginWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Messanger.Views.Windows.LoginWindow"
+﻿<Window x:Class="Messenger.Views.Windows.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Messanger.Views.Windows"
-        xmlns:vm="clr-namespace:Messanger.ViewModels"
-        xmlns:cc="clr-namespace:Messanger.CustomControls"
+        xmlns:local="clr-namespace:Messenger.Views.Windows"
+        xmlns:vm="clr-namespace:Messenger.ViewModels"
+        xmlns:cc="clr-namespace:Messenger.CustomControls"
         mc:Ignorable="d"
         Title="LoginWindow"
         Height="700"
