--- a/Messanger/Views/Windows/MainWindow.xaml
+++ b/Messanger/Views/Windows/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Messanger.MainWindow"
+﻿<Window x:Class="Messenger.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:Messanger.ViewModels"
-        xmlns:local="clr-namespace:Messanger"
+        xmlns:vm="clr-namespace:Messenger.ViewModels"
+        xmlns:local="clr-namespace:Messenger"
         mc:Ignorable="d"
         Title="{Binding TitleWindow}"
         Height="800"
