--- a/Messanger/App.xaml
+++ b/Messanger/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="Messenger.App"
+<Application x:Class="Messenger.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Messenger"
-             Startup="ApplicationStart">
-    <!--StartupUri="Views\Windows\MainWindow.xaml"> -->
+             xmlns:local="clr-namespace:Messanger"
+             StartupUri="Views\Windows\MainWindow.xaml">
+             <!--Startup="ApplicationStart"> -->
     <Application.Resources>
          
     </Application.Resources>
