--- a/Messanger/App.xaml
+++ b/Messanger/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Messanger"
-             StartupUri="Views\Windows\MainWindow.xaml">
-             <!--Startup="ApplicationStart"> -->
+             Startup="ApplicationStart"> 
+             <!--StartupUri="Views\Windows\MainWindow.xaml"-->
     <Application.Resources>
          
     </Application.Resources>
